[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/FinDePartie/FinDePartie.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Title_FontDynamic.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/Menu_FontDynamic.tres" type="DynamicFont" id=3]

[node name="FinDePartie" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.262745 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -367.0
margin_top = -284.0
margin_right = 367.0
margin_bottom = 284.0

[node name="Gagne" type="Label" parent="CanvasLayer/ColorRect/VBoxContainer"]
margin_right = 734.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "Gagn√©"
align = 1
uppercase = true

[node name="Temp" type="Label" parent="CanvasLayer/ColorRect/VBoxContainer"]
margin_top = 104.0
margin_right = 734.0
margin_bottom = 164.0
custom_fonts/font = ExtResource( 3 )
text = "Temps"
align = 1

[node name="Nom_Joueur" type="LineEdit" parent="CanvasLayer/ColorRect/VBoxContainer"]
margin_top = 168.0
margin_right = 734.0
margin_bottom = 238.0
custom_fonts/font = ExtResource( 3 )
text = "Votre Nom"
align = 1
max_length = 15

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ColorRect/VBoxContainer"]
margin_top = 242.0
margin_right = 734.0
margin_bottom = 308.0
alignment = 1

[node name="Rejouer" type="Button" parent="CanvasLayer/ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 194.0
margin_right = 371.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
text = "Rejouer"
flat = true
align = 2

[node name="Suivant" type="Button" parent="CanvasLayer/ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 375.0
margin_right = 540.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
text = "Suivant"
flat = true
[connection signal="text_changed" from="CanvasLayer/ColorRect/VBoxContainer/Nom_Joueur" to="." method="_on_Nom_Joueur_text_changed"]
[connection signal="text_entered" from="CanvasLayer/ColorRect/VBoxContainer/Nom_Joueur" to="." method="_on_Nom_Joueur_text_entered"]
[connection signal="pressed" from="CanvasLayer/ColorRect/VBoxContainer/HBoxContainer/Rejouer" to="." method="_on_Rejouer_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/VBoxContainer/HBoxContainer/Suivant" to="." method="_on_Suivant_pressed"]
